<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HD403Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="readbtn">读取</string>
    <string name="writebtn">写入</string>
    <string name="ioctlbtn">IOCTL</string>
    <string name="openbtn">打开设备</string>
    <string name="closebtn">关闭设备</string>
    <string name="dev_name">设备名称:</string>
    <string name="devnamehint">输入设备名称</string>
    <string name="read_lenth">读取长度:</string>
    <string name="write_cmd">写入命令:</string>
    <string name="write_cmd_hint">命令以逗号隔开</string>
    <string name="ioctl_cmd">ioctl命令:</string>
    <string name="check_write_cmd">请检查要写入的命令,以英文逗号分隔</string>
    <string name="check_read_cmd">请输入读取的长度</string>
    <string name="open_device_succed">打开设备成功</string>
    <string name="open_device_fail">打开设备失败</string>
    <string name="device_null">设备为空,请重新输入</string>


</resources>