<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/lin_01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_read"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/readbtn" />

        <Button
            android:id="@+id/btn_write"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/writebtn" />

        <Button
            android:id="@+id/btn_ioctl"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ioctlbtn"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lin_01"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_open"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/openbtn" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/closebtn" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tab_01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/devname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="1"
                android:hint="@string/devnamehint" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_lenth"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/readleth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_cmd"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/writecmd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="1"
                android:hint="@string/write_cmd_hint" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ioctl_cmd"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ioctlcmd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <com.hitown.demo.LogView
        android:id="@+id/demo_log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lin_02"
        android:layout_below="@id/tab_01"
        android:background="#00000000"
        android:gravity="top|left"
        android:inputType="none"
        android:padding="4dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:typeface="monospace" />

</RelativeLayout>